# scEcho

./: .codecov.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: example.ipynb
src/scEcho/: Echo_features.py  Echo_states.py  __init__.py  density_comp.py  echo_features.py  impute.py  plotting.py  test_components.py  try_models.py  utils.py
tests/: conftest.py  test_determinism.py  test_dn_comp_obsm.py  test_echo_features.py  test_echo_states.py  test_plot_SE.py  test_plot_scores.py  test_plotting.py  test_run_echo_features.py  test_test_components.py  test_try_models.py  test_utils.py
