[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scEcho"
version = "0.0.5"
description = "A framework for identifying desynchronized cell states from paired single-cell RNA and ATAC data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Connor Finkbeiner" },
]
keywords = ["single-cell", "genomics", "bioinformatics", "scanpy", "anndata"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "statsmodels",
    "tqdm",
    "anndata",
    "scanpy",
    "mellon",
    "kompot",
    "palantir",
    "adjustText",
    "itables",
    "ipywidgets",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/ConnorFinkbeiner/scEcho"
Repository = "https://github.com/ConnorFinkbeiner/scEcho"

[tool.setuptools.packages.find]
where = ["src"]
