[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scEcho"
version = "0.0.5"
description = "A framework for identifying desynchronized cell states from paired single-cell RNA and ATAC data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Connor Finkbeiner" },
]
keywords = ["single-cell", "genomics", "bioinformatics", "scanpy", "anndata"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "statsmodels",
    "tqdm",
    "anndata>=0.10,<1",
    "scanpy>=1.10,<2",
    "mellon>=1.7,<2",
    "kompot>=0.7,<1",
    "palantir>=1.3",
    "h5py>=3.10,<4",
    "adjustText",
    "itables",
    "ipywidgets",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/settylab/scEcho"
Repository = "https://github.com/settylab/scEcho"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
